--- a/index.html
+++ b/index.html
@@ -8,25 +8,34 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    hi
-    <div id="canvas"></div>
+    <canvas id="canvas"> </canvas>
     <script>
-      canvas.onclick = (e) => {
-        console.log(e.clientX);
-        console.log(e.clientY);
-        // console.log 调试法
-        let div = document.createElement("div");
-        div.style.position = "absolute";
-        div.style.left = e.clientX + "px";
-        div.style.top = e.clientY + "px";
-        div.style.border = "1px solid red";
-        div.style.width = "6px";
-        div.style.height = "6px";
-        div.style.marginLeft = "-3px";
-        div.style.marginTop = "-3px";
-        div.style.borderRadius = "50%";
-        div.style.background = "black";
-        canvas.appendChild(div);
+      let canvas = document.getElementById("canvas");
+      canvas.width = document.documentElement.clientWidth;
+      canvas.height = document.documentElement.clientHeight;
+      let ctx = canvas.getContext("2d");
+
+      let painting = false;
+
+      ctx.fillStyle = "black";
+      ctx.strokeStyle = "none";
+
+      canvas.onmousedown = (e) => {
+        painting = true;
+      };
+
+      canvas.onmousemove = (e) => {
+        if (painting === true) {
+          ctx.beginPath();
+          ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
+          ctx.stroke();
+          ctx.fill();
+        } else {
+          console.log("nothing");
+        }
+      };
+      canvas.onmouseup = (e) => {
+        painting = false;
       };
     </script>
   </body>
